Added README.md and made changes to lauch files

--- a/config/cmd_vel_mux_params.yaml
+++ b/config/cmd_vel_mux_params.yaml
@@ -16,7 +16,7 @@ cmd_vel_mux:
         priority:    7
         short_desc:  "Keyboard operation"
       navigation:
-        topic:       "input/navi"
+        topic:       "input/nav"
         timeout:     2.0
         priority:    5
         short_desc:  "Navigation stack controller"
